--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -182,6 +182,13 @@
   }
 }
 
+/* Logo image sizing */
+.logo-img {
+  max-height: 32px;
+  width: auto;
+  display: inline-block;
+}
+
 /* Button brand effect */
 .button {
   margin: 0;
@@ -204,6 +211,9 @@
   -webkit-text-stroke: 1px var(--text-stroke-color);
   white-space: nowrap;
   user-select: none;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
 }
 
 .hover-text {
@@ -217,14 +227,6 @@
   transition: 0.5s;
   -webkit-text-stroke: 1px var(--animation-color);
 }
-
-/* RIMOSSO animazione hover per far partire solo al caricamento */
-/*
-.button:hover .hover-text {
-  width: 100%;
-  filter: drop-shadow(0 0 10px var(--animation-color));
-}
-*/
 
 .button .hover-text.animate-on-load {
   animation: growText 1.2s ease forwards;
