--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>DocTrack</title>
+    <%= favicon_link_tag 'logodoctrack.png' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", media: "all" %>
